add new paragraph

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <div>Hello World</div>
+    <h1>Hello World</h1>
+
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum quasi sed iusto expedita, excepturi fugiat sequi eveniet soluta ab praesentium esse omnis dolores aspernatur architecto, a ullam quisquam itaque similique!</p>
 </body>
 </html>
